--- a/style/base.css
+++ b/style/base.css
@@ -1,12 +1,35 @@
-.test
-{
-    background-color: white;
-    outline: 2px solid darkorange;
-    color: darkorange;
+.test {
+  background-color: white;
 }
 
-.subclass
-{
-    background-color: gray;
-    color: black;
+.subclass {
+  background-color: gray;
+  color: black;
+}
+
+.jc-Comment {
+  background-color: lightblue;
+  width: 100%;
+  margin: 4px 8px 4px 8px;
+}
+
+.jc-Nametag {
+  width: 30%;
+  display: inline-block;
+  top: 0px;
+}
+
+.jc-Body {
+  width: 70%;
+  display: inline-block;
+  top: 0px;
+}
+
+.jc-DeleteButton {
+  bottom: 0px;
+  right: 0px;
+}
+
+.jc-Reply {
+  margin-left: 30px;
 }
