--- a/style/base.css
+++ b/style/base.css
@@ -1,4 +1,4 @@
-.test {
+.jc-CommentPanel {
   background-color: white;
 }
 
@@ -19,6 +19,13 @@
   top: 0px;
 }
 
+.jc-Time {
+  width: 70%;
+  display: inline-block;
+  top: 0px;
+  font-size: x-small;
+}
+
 .jc-Body {
   width: 70%;
   display: inline-block;
@@ -32,4 +39,10 @@
 
 .jc-Reply {
   margin-left: 30px;
+}
+
+.jc-CommentInput {
+  width: 100%;
+  min-height: 44px;
+  padding: 5px 4px;
 }
