--- a/style/base.css
+++ b/style/base.css
@@ -55,8 +55,16 @@
   width: 35px;
 }
 
-.jc-CommentWithReplies {
+.jc-CommentWidget {
   margin: 0 8px 12px 8px;
+}
+
+.jc-CommentWidget:focus-within .jc-Comment {
+  border-color: var(--jp-brand-color1);
+}
+
+.jc-CommentWidget:focus-within .jc-InputArea {
+  border-color: var(--jp-brand-color1);
 }
 
 .jc-InputArea {
