started work on comment preview

--- a/style/base.css
+++ b/style/base.css
@@ -16,11 +16,13 @@
 
   --jc-nametag-font-size: normal;
   --jc-nametag-font-weight: 500;
+
+  --var-jc-linesep: 2px;
 }
 
 .jc-CommentPanel {
   background-color: var(--jc-panel-background-color);
-  color: var(--jc-widget-color);
+  color: var(--jc-comment-color);
   overflow: auto;
 }
 
@@ -45,7 +47,7 @@
 }
 
 .jc-Body {
-  display: inline-block;
+  display: block;
   outline: none;
   border: none;
   appearance: none;
@@ -69,7 +71,7 @@
 }
 
 .jc-ProfilePic {
-  display: inline-block;
+  display: block;
   border-radius: 50%;
   top: 0;
   left: 0;
@@ -92,7 +94,8 @@
 }
 
 .jc-EditInputArea {
-  padding: 3px 3px 3px 3px;
+  margin-top: var(--var-jc-linesep);
+  padding: 3px;
 }
 
 .jc-ReplyInputArea:empty:before {
@@ -118,4 +121,23 @@
 }
 .jc-Ellipses > svg {
   width: var(--jc-dropdown-size);
+}
+
+.jc-Preview {
+  display: grid;
+  grid-template-columns: 6px calc(100% - 6px);
+  padding-left: 10px;
+  margin-top: var(--var-jc-linesep);
+}
+.jc-PreviewBar {
+  width: 2px;
+  height: 100%;
+  background-color: orange;
+}
+.jc-PreviewText {
+  color: var(--jc-timestamp-color);
+  word-wrap: break-word;
+  white-space: pre-wrap;
+  word-break: break-word;
+  margin-left: 10px;
 }
