--- a/style/base.css
+++ b/style/base.css
@@ -130,11 +130,11 @@
 }
 
 .jc-Highlight {
-  background-color: rgba(255,165,0,0.25);
+  background-color: rgba(255, 165, 0, 0.25);
 }
 
 .jc-HighlightFocus {
-  background-color: rgba(255,165,0,0.65);
+  background-color: rgba(255, 165, 0, 0.65);
 }
 
 .jc-Ellipses {
