Working identity modification

--- a/style/base.css
+++ b/style/base.css
@@ -220,4 +220,11 @@
   margin-right: -5px;
 }
 
+.jc-panelHeader-EditInputArea:empty:before {
+  color: var(--jp-ui-font-color3);
+}
+.jc-panelHeader-EditInputArea {
+  border: var(--jc-comment-border);
+  word-break: break-word;
+}
 
