--- a/style/base.css
+++ b/style/base.css
@@ -96,6 +96,10 @@
   height: 30px;
 }
 
+.jc-CommentWidget:focus-within .jc-Replies-breaker {
+  border-color: var(--jp-brand-color1);
+}
+
 .jc-Replies-breaker-left{
   /* height: 0% */
 }
