--- a/style/base.css
+++ b/style/base.css
@@ -338,6 +338,13 @@
   height: 80%;
 }
 
+.jc-Button {
+  cursor: pointer;
+}
+.jc-Button > svg {
+  width: 20px;
+}
+
 .jc-Error {
   height: 120px;
   width: 120px;
